[Add] Fixed spacing and centered contact form

--- a/HTML and CSS/contact.css
+++ b/HTML and CSS/contact.css
@@ -46,10 +46,9 @@ body {
   }
 
 .container {
+  margin: 0 auto;
   position: relative;
-  left: 1rem;
-  width: 22.1875rem;
-  position: relative;
+  width: 28rem;
   top: 0.9375rem;
 }
 
@@ -62,7 +61,6 @@ body {
   margin-top: 0.375rem;
   margin-bottom: 1rem;
   resize: vertical;
-
 }
 
 input[type=submit] { /* the submit button - inactive */
